--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -22,9 +22,10 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MyArchive" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpk-c3-hek">
                                         <rect key="frame" x="83.666666666666686" y="0.0" width="186" height="66.666666666666671"/>
+                                        <color key="tintColor" red="0.35759943181818177" green="0.30032782910452033" blue="0.28443256132113187" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="40"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
+                                        <color key="textColor" red="0.35759943179999998" green="0.2930972993" blue="0.276866051" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="highlightedColor" red="0.35759943179999998" green="0.2930972993" blue="0.276866051" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vx4-LX-AuD" userLabel="Form Stack View">
                                         <rect key="frame" x="5.3333333333333428" y="76.6666666666667" width="342.66666666666663" height="208.33333333333337"/>
@@ -53,6 +54,7 @@
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="3T3-D2-s08"/>
                                                         </constraints>
+                                                        <color key="tintColor" red="0.35759943181818177" green="0.29309729934912887" blue="0.27686605103182554" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="filled" title="Login"/>
                                                         <connections>
@@ -880,6 +882,7 @@
                                         <connections>
                                             <outlet property="chapterNumberLabel" destination="K6t-fA-rxA" id="zJs-hT-xFS"/>
                                             <outlet property="chapterTitleLabel" destination="lAM-q7-f4R" id="DLe-BU-ry0"/>
+                                            <segue destination="ler-Y1-hTE" kind="show" id="xqT-sg-oMz"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -934,28 +937,80 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Start writing!" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="03S-Hc-9uJ">
-                                <rect key="frame" x="16" y="165" width="361" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Chapter Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gfy-5z-Gnx">
-                                <rect key="frame" x="16" y="123" width="174" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGS-eL-CFJ">
-                                <rect key="frame" x="316" y="122" width="61" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Save"/>
-                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="VTu-Lb-aHK">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EditChapterCell" rowHeight="694" id="bxn-dk-1Et" customClass="EditChapterCell" customModule="MyArchive" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="694"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bxn-dk-1Et" id="oIx-Zd-Ntx">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="694"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="kt9-rv-3Cf" userLabel="Main Stack View">
+                                                    <rect key="frame" x="40" y="31" width="313" height="632"/>
+                                                    <subviews>
+                                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0f2-jU-MLc">
+                                                            <rect key="frame" x="0.0" y="0.0" width="313" height="50"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="50" id="hym-jr-Kgb"/>
+                                                            </constraints>
+                                                            <nil key="textColor"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                            <textInputTraits key="textInputTraits"/>
+                                                        </textField>
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UHE-oE-vMs">
+                                                            <rect key="frame" x="0.0" y="60" width="313" height="572"/>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                            <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                                            <color key="textColor" systemColor="labelColor"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        </textView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="kt9-rv-3Cf" firstAttribute="leading" secondItem="oIx-Zd-Ntx" secondAttribute="leadingMargin" constant="20" id="Chd-Sb-vIf"/>
+                                                <constraint firstItem="kt9-rv-3Cf" firstAttribute="top" secondItem="oIx-Zd-Ntx" secondAttribute="topMargin" constant="20" id="MAJ-Yh-TDS"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="kt9-rv-3Cf" secondAttribute="bottom" constant="20" id="TnL-21-rUJ"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="kt9-rv-3Cf" secondAttribute="trailing" constant="20" id="wVl-dU-FRt"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentTextView" destination="UHE-oE-vMs" id="RKB-wd-fK3"/>
+                                            <outlet property="titleTextField" destination="0f2-jU-MLc" id="RFa-Pg-XM5"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Yhe-8D-4kc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Yhe-8D-4kc" firstAttribute="trailing" secondItem="VTu-Lb-aHK" secondAttribute="trailing" id="Nm5-5x-S39"/>
+                            <constraint firstItem="VTu-Lb-aHK" firstAttribute="leading" secondItem="Yhe-8D-4kc" secondAttribute="leading" id="gm9-hd-xnO"/>
+                            <constraint firstItem="VTu-Lb-aHK" firstAttribute="top" secondItem="Yhe-8D-4kc" secondAttribute="top" id="pc5-fb-5os"/>
+                            <constraint firstItem="Yhe-8D-4kc" firstAttribute="bottom" secondItem="VTu-Lb-aHK" secondAttribute="bottom" id="uYU-rU-jHA"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="xQk-z1-rIT">
+                        <centerItemGroups>
+                            <barButtonItemGroup customizationDisposition="fixed" id="FSa-6l-8Vj">
+                                <barButtonItems>
+                                    <barButtonItem title="Save" id="oVs-NB-oYG">
+                                        <connections>
+                                            <action selector="didTapSave:" destination="ler-Y1-hTE" id="JWr-Ew-49z"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </barButtonItems>
+                            </barButtonItemGroup>
+                        </centerItemGroups>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="VTu-Lb-aHK" id="oFi-yn-jKQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H1v-a1-y05" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
