--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -552,10 +552,77 @@
                     <view key="view" contentMode="scaleToFill" id="UFB-gB-Ve7">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gH1-ri-LYd">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ResultCell" rowHeight="257" id="RBK-zO-bIc" customClass="StoryCell" customModule="MyArchive" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="257"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RBK-zO-bIc" id="NN9-fm-XsL">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="257"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w7n-Yx-NNJ" userLabel="Main Stack View">
+                                                    <rect key="frame" x="35" y="26" width="323" height="205"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DefaultCover" translatesAutoresizingMaskIntoConstraints="NO" id="2Ef-kK-uEE">
+                                                            <rect key="frame" x="0.0" y="0.0" width="115" height="179"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="115" id="Ete-qh-hnR"/>
+                                                                <constraint firstAttribute="height" constant="179" id="Ki0-7t-aTH"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Fd-vj-wNz" userLabel="Info Stack View">
+                                                            <rect key="frame" x="123" y="0.0" width="200" height="54.666666666666664"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAH-aM-PAP">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="41" height="26.333333333333332"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DdO-PC-SX3">
+                                                                    <rect key="frame" x="0.0" y="34.333333333333336" width="87.333333333333329" height="20.333333333333336"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="w7n-Yx-NNJ" secondAttribute="bottom" constant="15" id="4K8-M3-1Xb"/>
+                                                <constraint firstItem="w7n-Yx-NNJ" firstAttribute="top" secondItem="NN9-fm-XsL" secondAttribute="topMargin" constant="15" id="IzF-0R-VsZ"/>
+                                                <constraint firstItem="w7n-Yx-NNJ" firstAttribute="leading" secondItem="NN9-fm-XsL" secondAttribute="leadingMargin" constant="15" id="Sy0-iy-ZjS"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="w7n-Yx-NNJ" secondAttribute="trailing" constant="15" id="WmC-Wu-qqE"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="coverImageView" destination="2Ef-kK-uEE" id="boZ-JP-dro"/>
+                                            <outlet property="descriptionLabel" destination="DdO-PC-SX3" id="odM-BQ-GUW"/>
+                                            <outlet property="titleLabel" destination="wAH-aM-PAP" id="Ivk-fJ-cGm"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="MQS-Kl-43O"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MQS-Kl-43O" firstAttribute="bottom" secondItem="gH1-ri-LYd" secondAttribute="bottom" id="41a-4d-QGP"/>
+                            <constraint firstItem="MQS-Kl-43O" firstAttribute="trailing" secondItem="gH1-ri-LYd" secondAttribute="trailing" id="Wck-SZ-H1K"/>
+                            <constraint firstItem="gH1-ri-LYd" firstAttribute="top" secondItem="MQS-Kl-43O" secondAttribute="top" id="qU2-FD-4Gr"/>
+                            <constraint firstItem="gH1-ri-LYd" firstAttribute="leading" secondItem="MQS-Kl-43O" secondAttribute="leading" id="uH3-zt-sCo"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="vQR-40-OIt"/>
+                    <connections>
+                        <outlet property="tableView" destination="gH1-ri-LYd" id="7Sg-zK-5cs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RF8-1K-mC1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
